lists page and cards

--- a/MedHelpAngular/src/app/specialties/pages/list-page/list-page.component.html
+++ b/MedHelpAngular/src/app/specialties/pages/list-page/list-page.component.html
@@ -1,1 +1,18 @@
-<p>list-page works!</p>
+<div class="container">
+
+  <h1>Choose the speacialist that best works for you</h1>
+
+  <div>
+
+    <mat-card class="col-12 md:col-3 xl:col-3">
+      <mat-card-header>
+        <mat-card-title>Cardiologist</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>A cardiologist specializes in diagnosing and treating diseases of the heart and blood vessels, such as heart attacks, arrhythmias, and hypertension.</p>
+      </mat-card-content>
+    </mat-card>
+
+  </div>
+
+</div>
