--- a/MedHelpAngular/src/app/auth/pages/login/login.component.html
+++ b/MedHelpAngular/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="flex flex-column">
+  <span class="test-lg bt-4">Login</span>
+
+  <mat-form-field class="mt-2">
+    <mat-label>Username</mat-label>
+    <input type="text" matInput placeholder="Username">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input type="password" matInput placeholder="Password">
+  </mat-form-field>
+
+  <button mat-button mat-flat-button >
+    <mat-icon>save</mat-icon>
+    Login
+  </button>
+
+  <div class="div flex justify-content-end mt-5">
+    <a routerLink="/auth/new-account">Don't have an account yet?</a>
+  </div>
+
+</div>
