Initial sidenav and top toolbar

--- a/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
@@ -1,4 +1,33 @@
-<p>layout-page works!</p>
+<mat-sidenav-container fullscreen>
+
+  <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px' }" class="sidenav">
+    <mat-toolbar class="sidenav-bg">
+      <span>Menu</span>
+      <span class="spacer"></span>
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+  </mat-sidenav>
 
 
-<router-outlet></router-outlet>
+  <mat-toolbar class="sidenav-bg">
+
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+
+    <span class="spacer"></span>
+
+    <button mat-button>
+      Logout
+    </button>
+
+
+  </mat-toolbar>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+
+</mat-sidenav-container>
