--- a/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
@@ -8,6 +8,20 @@
         <mat-icon>menu</mat-icon>
       </button>
     </mat-toolbar>
+
+    <mat-nav-list>
+      <mat-list-item
+        *ngFor="let item of sidebarItems"
+        [routerLink]="item.url"
+        (click)="sidenav.toggle()"
+      >
+
+      <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+      {{ item.label }}
+
+      </mat-list-item>
+    </mat-nav-list>
+
   </mat-sidenav>
 
 
