--- a/MedHelpAngular/src/app/medhelp/components/card/card.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/card/card.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-header class="grid bm-8 pt-2">
     <mat-card-title>{{ specialty?.name }}</mat-card-title>
-    <mat-card-subtitle>Description of the <strong>{{ specialty?.name }}</strong></mat-card-subtitle>
+    <mat-card-subtitle>Description:</mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content class="mt-2">
