--- a/MedHelpAngular/src/app/medhelp/pages/list-specialties/list-specialties.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/list-specialties/list-specialties.component.html
@@ -1,4 +1,4 @@
-<h2>List of our <strong>specialties</strong></h2>
+<h2>List of medic <strong>specialties</strong></h2>
 <mat-divider></mat-divider>
 
 
