--- a/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
@@ -33,7 +33,9 @@
 
     <span class="spacer"></span>
 
-    <button mat-button>
+    <span>{{ user?.username }}</span>
+
+    <button mat-button (click)="onLogout()">
       Logout
     </button>
 
