--- a/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/layout-page/layout-page.component.html
@@ -33,7 +33,7 @@
 
     <span class="spacer"></span>
 
-    <span>{{ user?.username }}</span>
+    <span>{{ user?.userName }}</span>
 
     <button mat-button (click)="onLogout()">
       Logout
