--- a/MedHelpAngular/src/styles.css
+++ b/MedHelpAngular/src/styles.css
@@ -6,3 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spacer {
   flex: 1 1 auto;
 }
+
+h2 {
+  font-size: 2rem !important;
+}
