--- a/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="doctor-card" appearance="outlined">
+<mat-card class="doctor-card mt-2" appearance="outlined" >
   <img
   src="https://images.theconversation.com/files/304957/original/file-20191203-66986-im7o5.jpg?ixlib=rb-4.1.0&q=45&auto=format&w=926&fit=clip"
   alt="Doctor profile pciture"
