--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -1,36 +1,44 @@
 <h2>Do you want to schedule an <strong>appointment?</strong></h2>
 <mat-divider></mat-divider>
 
-<mat-tab-group>
-  <mat-tab label="First"> Content 1 </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
-</mat-tab-group>
+<form [formGroup]="appointmentForm" class="flex align-items-center flex-column">
+  <mat-tab-group>
 
+    <mat-tab label="Select the specialty">
+      <!-- Select specialty first //Comment -->
+      <mat-form-field appearance="fill" class="screen-size custom-form-field p-2">
 
-<!-- <form [formGroup]="appointmentForm" class="flex align-items-center flex-column">
-
-  Select specialty first //Comment
-    <mat-form-field appearance="fill" class="screen-size custom-form-field mb-2 mt-2"
-    >
         <mat-label>Select your medical specialty</mat-label>
         <mat-select formControlName="specialty" class="custom-mat-select">
           <mat-option *ngFor="let specialty of specialties" [value]="specialty.id">
             {{ specialty.name }}
           </mat-option>
         </mat-select>
-    </mat-form-field>
 
-  Select the date //Comment
-  <div class="flex align-items-center flex-column mb-2">
-    <mat-label>Choose a date</mat-label>
-    <mat-card class="screen-size">
-      <mat-calendar [(selected)]="selected" (selectedChange)="onDateSelected($event)"
-      class="calendar border-round-lg"></mat-calendar>
-    </mat-card>
-  </div>
 
-  Select doctor //Comment
-   <doctor-card></doctor-card>
 
-</form> -->
+      </mat-form-field>
+
+    </mat-tab>
+
+    <mat-tab label="Choose a date">
+
+      <!-- Select the date //Comment -->
+      <div class="flex align-items-center flex-column p-3">
+        <mat-label class="mb-2">Choose a date</mat-label>
+        <mat-card class="screen-size">
+          <mat-calendar [(selected)]="selected" (selectedChange)="onDateSelected($event)"
+            class="calendar border-round-lg"></mat-calendar>
+        </mat-card>
+      </div>
+
+    </mat-tab>
+
+    <mat-tab label="Choose a doctor">
+
+      <doctor-card></doctor-card>
+
+    </mat-tab>
+  </mat-tab-group>
+
+</form>
