--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
@@ -11,6 +11,8 @@
   color: white;
 }
 
+/* Slider for the Categories and specialties */
+
 .slider-container {
   display: flex;
   overflow-x: auto;
@@ -21,11 +23,40 @@
 
 .card-container{
   flex: 0 0 auto;
-  width: 150px;
+  width: 280px;
   height: auto;
-
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  background-color: cornflowerblue;
+  /* overflow: hidden; */
 }
 
+.categories {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center; /* Centra el texto dentro de la tarjeta */
+}
+
+.categories h5 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  overflow: hidden; /* Oculta el texto que se desborda */
+  text-overflow: ellipsis; /* Añade "..." si el texto es muy largo */
+  white-space: nowrap; /* Evita que el texto se envuelva */
+}
+
+.specialties {
+  font-size: 1rem;
+  overflow: hidden; /* Oculta contenido que excede el ancho */
+  text-overflow: ellipsis; /* Muestra "..." al final del texto si es demasiado largo */
+  white-space: normal;
+}
+
+
+/* Finish of the categories and specialties css */
 
 
 .calendar{
