--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
@@ -13,18 +13,21 @@
 
 /* Slider for the Categories and specialties */
 
+
+
 .slider-container {
   display: flex;
+  flex: 0 0 auto;
   overflow-x: auto;
   white-space: nowrap;
   gap: 1rem;
-  padding: 1rem;
 }
 
 .card-container{
   flex: 0 0 auto;
-  width: 280px;
-  height: auto;
+  width: 200px;
+  height: 100%;
+  padding: 5px;
   border: 1px solid black;
   border-radius: 8px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
@@ -33,8 +36,6 @@
 }
 
 .categories {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   text-align: center; /* Centra el texto dentro de la tarjeta */
 }
@@ -42,19 +43,25 @@
 .categories h5 {
   font-size: 1.2rem;
   font-weight: bold;
+  line-height: 25px;
   margin-bottom: 0.5rem;
-  overflow: hidden; /* Oculta el texto que se desborda */
-  text-overflow: ellipsis; /* Añade "..." si el texto es muy largo */
-  white-space: nowrap; /* Evita que el texto se envuelva */
+  white-space: normal;
+  overflow-wrap: break-word;
+  margin: 0;
+
 }
 
 .specialties {
   font-size: 1rem;
-  overflow: hidden; /* Oculta contenido que excede el ancho */
-  text-overflow: ellipsis; /* Muestra "..." al final del texto si es demasiado largo */
   white-space: normal;
+  overflow-wrap: break-word;
 }
 
+.specialties ul{
+  margin: 0.2rem;
+  /* padding: 0; */
+  list-style-type: square;
+}
 
 /* Finish of the categories and specialties css */
 
