--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
@@ -20,8 +20,8 @@
   overflow-x: auto;
   overflow-y: auto;
   white-space: nowrap;
-  height: 250px;
-  max-height: 250px;
+  height: auto;
+  max-height: auto;
   gap: 1rem;
   padding: 1rem;
 }
@@ -29,17 +29,16 @@
 .card-container{
   flex: 0 0 auto;
   width: 200px;
-  height: 100%;
+  height: 500px;
   padding: 5px;
   border: 1px solid black;
   border-radius: 8px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-  background-color: cornflowerblue;
+  background-color: #b3c6b8;
 }
 
 .categories {
   align-items: center;
-  text-align: center; /* Centra el texto dentro de la tarjeta */
 }
 
 .categories h5 {
@@ -50,6 +49,7 @@
   white-space: normal;
   overflow-wrap: break-word;
   margin: 0;
+  color: #000000;
 
 }
 
@@ -60,10 +60,15 @@
 }
 
 .specialties ul{
-  margin: 0.2rem;
-  /* padding: 0; */
-  list-style-type: square;
+  padding-left: 0px;
+  list-style-type: none;
 }
+
+.specialty{
+  height: max-content;
+  padding: 7px;
+}
+
 
 /* Finish of the categories and specialties css */
 
@@ -93,6 +98,6 @@
 /* big screens */
 @media (min-width: 1024px) {
   .screen-size {
-    width: 800px;
+    width: 600px;
   }
 }
