--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -6,25 +6,20 @@
 
     <mat-tab label="Select the specialty">
 
-      <div class="slider-container mt-2">
-        <div class="card-container" *ngFor="let category of categories">
-          <div class="categories">
-            <h5>{{ category.name }}</h5>
-            <div class="specialties">
-              <ul *ngFor="let specialtyName of category.specialtyNames">
-                <!-- <li></li> -->
-                <li>
-                  <div>
-                    <button mat-fab extended class="specialty">
-                      {{ specialtyName }}
-                    </button>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+      <mat-form-field>
+        <mat-label>Choose the specialty</mat-label>
+        <input type="text" matInput
+        formControlName="specialty"
+        [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+          <!-- @for (option of filteredOptions | async; track option) { -->
+          <!-- <mat-option [value]="option">{{option.name}}</mat-option> -->
+           <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+            {{ option.name }}
+           </mat-option>
+          <!-- } -->
+        </mat-autocomplete>
+      </mat-form-field>
 
     </mat-tab>
 
