Deleting the specialty component content, I have to do the autocomplete component from scratch

--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -5,15 +5,7 @@
   <mat-tab-group>
 
     <mat-tab label="Select the specialty">
-      <app-autocomplete
-      [options]="specialties"
-      [displayWith]="displaySpecialties"
-      [control]="appointmentForm.get('specialty')"
-      placeholder="Choose the specialty"
-      (selected)="onSpecialtySelected($event)"
-      >
-
-      </app-autocomplete>
+      <!-- Here the autocomplete -->
 
     </mat-tab>
 
