autocomplete component working

--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -6,6 +6,7 @@
 
     <mat-tab label="Select the specialty">
       <!-- Here the autocomplete -->
+       <autocomplete-specialty></autocomplete-specialty>
 
     </mat-tab>
 
