--- a/MedHelpAngular/src/app/medhelp/components/autocomplete-specialty/autocomplete-specialty.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/autocomplete-specialty/autocomplete-specialty.component.html
@@ -1,13 +1,14 @@
 
 
-<form class="example-form">
+<!-- <form class="example-form"> -->
   <mat-form-field class="example-full-width">
     <mat-label>Assignee</mat-label>
     <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
       @for (option of filteredOptions | async; track option) {
+        <hr>
         <mat-option [value]="option">{{option.name}}</mat-option>
       }
     </mat-autocomplete>
   </mat-form-field>
-</form>
+<!-- </form> -->
