--- a/MedHelpAngular/src/app/medhelp/components/autocomplete-specialty/autocomplete-specialty.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/autocomplete-specialty/autocomplete-specialty.component.html
@@ -1,8 +1,8 @@
 
 
 <!-- <form class="example-form"> -->
-  <mat-form-field class="example-full-width">
-    <mat-label>Assignee</mat-label>
+  <mat-form-field class="mt-3">
+    <mat-label>{{placeholder}}</mat-label>
     <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
       @for (option of filteredOptions | async; track option) {
