Select specialty width

--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.css
@@ -1,5 +1,25 @@
 /* QUERIES */
 
+.specialties-container {
+  max-width: 100%; /* Ajusta según el diseño */
+  width: 100%; /* Para que no ocupe más del espacio disponible */
+  overflow: hidden; /* Por si algo desborda */
+  box-sizing: border-box; /* Asegúrate de que padding no aumente el tamaño total */
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; /* O 'center' si lo quieres centrado verticalmente */
+  max-width: 100%;
+}
+
+.specialties-box {
+  width: 100%;
+  max-width: 600px; /* Ajusta según el diseño */
+}
+
+
 /* deafult - small screens */
 .screen-size {
   width: 350px;
@@ -19,6 +39,8 @@
 }
 
 
+
+
 /* Finish of the categories and specialties css */
 
 
@@ -31,7 +53,7 @@
 /* very small screens */
 @media (min-width: 0px) {
   .screen-size {
-    width: 200px;
+    width: 400px;
   }
 }
 
