--- a/MedHelpAngular/src/app/medhelp/components/autocomplete-specialty/autocomplete-specialty.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/autocomplete-specialty/autocomplete-specialty.component.html
@@ -6,7 +6,7 @@
     <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
       @for (option of filteredOptions | async; track option) {
-        <hr>
+        <mat-divider></mat-divider>
         <mat-option [value]="option">{{option.name}}</mat-option>
       }
     </mat-autocomplete>
