--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -2,9 +2,9 @@
 <mat-divider></mat-divider>
 
 <form [formGroup]="appointmentForm" class="flex align-items-center flex-column">
-  <mat-tab-group>
+  <mat-tab-group dynamicHeight>
 
-    <mat-tab label="Select the specialty">
+    <mat-tab mat-elevation-z4 mat-stretch-tabs="true" disablePagination="true" label="Select the specialty">
       <!-- Here the autocomplete -->
        <autocomplete-specialty
        placeholder="Search the specialty"
@@ -12,13 +12,13 @@
        >
        </autocomplete-specialty>
 
-       <div class="container">
+       <div class="container specialties-box">
         <app-list-specialties></app-list-specialties>
        </div>
 
       </mat-tab>
 
-    <mat-tab label="Choose a date">
+    <mat-tab mat-stretch-tabs="true" label="Choose a date">
 
       <!-- Select the date //Comment -->
       <div class="flex align-items-center flex-column p-3">
@@ -31,7 +31,7 @@
 
     </mat-tab>
 
-    <mat-tab label="Choose a doctor">
+    <mat-tab mat-stretch-tabs="true" label="Choose a doctor">
 
       <doctor-card></doctor-card>
 
