--- a/MedHelpAngular/src/app/medhelp/pages/list-specialties/list-specialties.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/list-specialties/list-specialties.component.html
@@ -4,7 +4,8 @@
 
 <div class="grid mt-2">
   <div *ngFor="let specialty of specialties"
-   class="col-12 sm:col-4 md:col-3 xl:col-2">
+   class="col-12 sm:col-4 md:col-3 xl:col-2"
+   >
    <specialty-card [specialty]="specialty"></specialty-card>
   </div>
 </div>
