--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -22,6 +22,14 @@
 
     <mat-tab mat-stretch-tabs="true" label="Choose a doctor">
 
+
+      <doctor-card style="width: 100vh;"></doctor-card>
+
+    </mat-tab>
+
+    <mat-tab mat-stretch-tabs="true" label="Choose the date">
+
+
       <!-- Select the date //Comment -->
       <div class="flex align-items-center flex-column p-3">
         <mat-label class="mb-2">Choose a date</mat-label>
@@ -30,12 +38,6 @@
             class="calendar border-round-lg"></mat-calendar>
         </mat-card>
       </div>
-
-    </mat-tab>
-
-    <mat-tab mat-stretch-tabs="true" label="Choose a doctor">
-
-      <doctor-card></doctor-card>
 
     </mat-tab>
   </mat-tab-group>
