category interface typo rectified

--- a/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
@@ -1,9 +1,9 @@
 <mat-card class="doctor-card mt-2" appearance="outlined" >
   <img
-  src="https://images.theconversation.com/files/304957/original/file-20191203-66986-im7o5.jpg?ixlib=rb-4.1.0&q=45&auto=format&w=926&fit=clip"
+  src="https://jpsonline.co.uk/cdn/shop/files/JPS-VL-FAS129.png?v=1720742725&width=1125"
   alt="Doctor profile pciture"
   width=""
-  class="doctor-image">
+  class="doctor-picture">
   <mat-card-header class="card-header mb-2">
     <mat-card-title>Doctor's name</mat-card-title>
     <mat-card-subtitle>Doctor's specialties</mat-card-subtitle>
