--- a/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
@@ -1,16 +1,22 @@
-<mat-card class="doctor-card mt-2" appearance="outlined" >
+<mat-card class="doctor-card mt-2" appearance="outlined" *ngFor="let doctor of doctors">
   <img
   src="https://jpsonline.co.uk/cdn/shop/files/JPS-VL-FAS129.png?v=1720742725&width=1125"
   alt="Doctor profile pciture"
   width=""
   class="doctor-picture">
   <mat-card-header class="card-header mb-2">
-    <mat-card-title>Doctor's name</mat-card-title>
-    <mat-card-subtitle>Doctor's specialties</mat-card-subtitle>
+    <mat-card-title>{{doctor.firstName}}</mat-card-title>
+    <mat-card-subtitle>{{doctor.email}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla a consequatur molestias aliquam voluptate, autem error quod mollitia debitis enim, doloribus excepturi eveniet aliquid unde odit magnam, ex commodi officiis!
-    </p>
+    <h4>Specialties</h4>
+    <mat-chip-listbox aria-label="specialties">
+      <mat-chip
+      *ngFor="let specialty of doctor.specialtyNames"
+      class="p-2"
+      >
+      {{specialty}}
+    </mat-chip>
+    </mat-chip-listbox>
   </mat-card-content>
 </mat-card>
