--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -13,7 +13,7 @@
         <div *ngFor="let specialty of specialties"
         class="col-12 sm:col-4 md:col-3 xl:col-3 "
         >
-          <specialty-card class="specialties-container" [specialty]="specialty"></specialty-card>
+          <specialty-card [specialty]="specialty"></specialty-card>
         </div>
       </div>
 
@@ -23,7 +23,7 @@
     <mat-tab mat-stretch-tabs="true" label="Choose a doctor">
 
 
-      <doctor-card style="width: 100vh;"></doctor-card>
+      <doctor-card ></doctor-card>
 
     </mat-tab>
 
