--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -10,9 +10,7 @@
       </autocomplete-specialty>
 
       <div class="grid mt-2 tab-box">
-        <div *ngFor="let specialty of specialties"
-        class="col-12 sm:col-4 md:col-3 xl:col-3 "
-        >
+        <div *ngFor="let specialty of specialties" class="col-12 sm:col-4 md:col-3 xl:col-3 ">
           <specialty-card [specialty]="specialty"></specialty-card>
         </div>
       </div>
@@ -21,8 +19,6 @@
     </mat-tab>
 
     <mat-tab mat-stretch-tabs="true" label="Choose a doctor">
-
-
       <doctor-card class="tab-box"></doctor-card>
 
     </mat-tab>
