--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -9,9 +9,21 @@
       <autocomplete-specialty placeholder="Search the specialty" [myControl]="specialtyControl">
       </autocomplete-specialty>
 
+
       <div class="grid mt-2 tab-box">
-        <div *ngFor="let specialty of specialties" class="col-12 sm:col-4 md:col-3 xl:col-3 ">
+        <!-- <div *ngFor="let specialty of specialties" class="col-12 sm:col-4 md:col-3 xl:col-3 ">
           <specialty-card [specialty]="specialty"></specialty-card>
+        </div> -->
+        <div class="container">
+          <mat-accordion *ngFor="let category of categories">
+            <mat-expansion-panel hideToggle>
+              <mat-expansion-panel-header>
+                <mat-panel-title>{{ category.name }}</mat-panel-title>
+                <!-- <mat-panel-description></mat-panel-description> -->
+              </mat-expansion-panel-header>
+
+            </mat-expansion-panel>
+          </mat-accordion>
         </div>
       </div>
 
