--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -4,6 +4,7 @@
 <form [formGroup]="appointmentForm" class="flex align-items-center flex-column">
   <mat-tab-group dynamicHeight>
 
+    <!-- Specialty Seccion -->
     <mat-tab mat-elevation-z4 mat-stretch-tabs="true" disablePagination="true" label="Select the specialty">
       <!-- Here the autocomplete -->
       <autocomplete-specialty placeholder="Search the specialty" [myControl]="specialtyControl">
@@ -41,11 +42,14 @@
 
     </mat-tab>
 
+    <!-- Doctor Section -->
     <mat-tab mat-stretch-tabs="true" label="Choose a doctor">
 
       <div class="grid mt-2 tab-box">
         <div *ngFor="let doctor of doctors" class="col-12 sm:col-4 md:col-3 xl:col-4">
-          <doctor-card [doctor]="doctor"></doctor-card>
+          <doctor-card [doctor]="doctor">
+            
+          </doctor-card>
         </div>
       </div>
       <!-- <doctor-card class="tab-box"></doctor-card> -->
