--- a/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
+++ b/MedHelpAngular/src/app/medhelp/components/doctor-card/doctor-card.component.html
@@ -19,4 +19,9 @@
     </mat-chip>
     </mat-chip-listbox>
   </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button (click)="selectDoctor(doctor)">
+      Select
+    </button>
+  </mat-card-actions>
 </mat-card>
