Showing only available dates in the calendar

--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -88,7 +88,7 @@
 
 <!-- view form status -->
 
-<div>
+<!-- <div>
   <h2>specialty from</h2>
   <code>
     {{ firstAppointmentForm.value | json }}
@@ -107,4 +107,4 @@
   <p>
     is form valid: {{ secondAppointmentForm.valid }}
   </p>
-</div>
+</div> -->
