Get schedules by doctor id

--- a/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
+++ b/MedHelpAngular/src/app/medhelp/pages/appointment-page/appointment-page.component.html
@@ -57,6 +57,7 @@
         <div *ngFor="let doctor of doctors" class="col-12 sm:col-6 md:col-4 lg:col-3 xl:col-2">
           <doctor-card [doctor]="doctor"
           (doctorSelected)="onDoctorSelected($event)"
+          (click)="updateAvailableDates(doctor)"
           >
           </doctor-card>
         </div>
